# biol-8

./: .cursorrules  .gitignore  AGENTS.md  DOCUMENT_TYPES.md  GENERATION.md  README.md
software/: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  run_tests.sh
software/docs/: AGENTS.md  ORCHESTRATION.md  QUICKSTART.md  README.md
software/scripts/: README.md  generate_all_outputs.py  generate_module_renderings.py  generate_module_website.py  generate_syllabus_renderings.py  publish_all.py
software/src/: .cursorrules  AGENTS.md  README.md  __init__.py
software/src/batch_processing/: AGENTS.md  __init__.py  config.py  logging_config.py  main.py  utils.py
software/src/canvas_integration/: AGENTS.md  __init__.py  config.py  main.py  utils.py
software/src/file_validation/: AGENTS.md  __init__.py  config.py  main.py  utils.py
software/src/format_conversion/: AGENTS.md  __init__.py  config.py  main.py  utils.py
software/src/html_website/: AGENTS.md  __init__.py  config.py  main.py  utils.py
software/tests/: .cursorrules  AGENTS.md  README.md  conftest.py  test_batch_processing_main.py  test_canvas_integration_main.py  test_canvas_integration_utils.py  test_dependencies.py  test_file_validation_main.py  test_file_validation_utils.py  test_format_conversion_main.py  test_imports.py  test_integration.py  test_markdown_to_pdf_main.py  test_module_organization_main.py  test_module_organization_main_extended.py  test_module_organization_utils.py  test_orchestration.py  test_publish_main.py  test_real_implementations.py  test_speech_to_text_main.py  test_text_to_speech_main.py
(+657 files in other folders)
